# english-dictionary

./: .gitignore  LICENSE  MANIFEST.in  README.md  another.json  data.json  go.json  main.py  requirements.txt  settings.py  setup.cfg  setup.py  som.html  som.json  try.json
.github/workflows/: run_tests.yml
english_dictionary/: __init__.py  api.py  core.py  database.py  run.py  types.py  words.db
english_dictionary/gui/: __init__.py  add_word_dialog.py  add_word_dialog.ui  components.py  definition_groupbox.py  definition_groupbox.ui  mainwindow.py  mainwindow.ui  meanings_groupbox.py  meanings_groupbox.ui  pronunciation_groupbox.py  pronunciation_groupbox.ui  related_words_groupbox.py  related_words_groupbox.ui  words.py
english_dictionary/utils/: formatter.py  helpers.py  types.py
english_dictionary/wiktionaryparser/: __init__.py  core.py
gui/: components.py  words.py
tests/: test_algorithms.py  test_api.py  test_database.py  test_dictionary.py  test_formatter.py  test_types.py
utils/: formatter.py  types.py
wiktionaryparser/: core.py  utils.py
