[aliases]
test = pytest

[metadata]
version = attr: english_dictionary.__version__
license = GNU General Public License v3.0
license_file = LICENSE
description = An (offline) English Dictionary
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
install_requires =
    requests
    PyQt5

[options.package_data]
* = *.svg

[options.entry_points]
console_scripts =
    eng-dict = english_dictionary.run:main
